# rag_with_ollama

./: main.py  pyproject.toml
notebook/: intro.ipynb
