[project]
name = "rag-first"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pipenv>=2026.6.1",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "torch>=2.12.0",
]
